--- a/digitaalwerk.html
+++ b/digitaalwerk.html
@@ -44,7 +44,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/n">simple site templates</a></section><section class="carousel slide cid-r64YoBv41O" data-interval="false" id="slider2-10">
+<section class="engine"><a href="https://mobiri.se/r">free bootstrap templates</a></section><section class="carousel slide cid-r64YoBv41O" data-interval="false" id="slider2-10">
 
     
     <div class="container content-slider">
