--- a/page2.html
+++ b/page2.html
@@ -51,7 +51,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/n">free simple web templates</a></section><section class="carousel slide cid-r5qgafNYfy" data-interval="false" id="slider2-h">
+<section class="engine"><a href="https://mobiri.se/c">free site builder</a></section><section class="carousel slide cid-r5qgafNYfy" data-interval="false" id="slider2-h">
 
     
     <div class="container content-slider">
